# baza_server

./: .gitignore  docker-compose.yml  requirements.txt
bot/: .env  .gitignore  Bot.Dockerfile  README.md  Server.Dockerfile  pyproject.toml  runbot.py  runserver.py  sqlite.db
bot/bot/: bot.py  utils.py
bot/db/: engine.py  models.py  repository.py
bot/handlers/: __init__.py  filters.py
bot/handlers/admin/: __init__.py  admin.py  employees.py  requests.py
bot/handlers/anonymous/: __init__.py  request.py
bot/handlers/manager/: __init__.py  keyboards.py  menu.py  new_orders.py  orders.py
bot/webhook/handlers/: __init__.py
bot/webhook/handlers/orders/: __init__.py  new_order.py
cdek/: main.py  pyproject.toml  utils.py
loyalty/: pyproject.toml
nginx/: Dockerfile  (+1 more)
server/: .env  .env-example  .gitignore  Dockerfile  db.sqlite3  manage.py  pyproject.toml
server/api/: backends.py  middlewares.py  permissions.py  request.py  storages.py  urls.py  utils.py
server/api/authentication/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
server/api/authentication/migrations/: 0001_initial.py  0002_alter_authcodemodel_lifetime.py  0003_alter_authcodemodel_lifetime.py  0004_alter_authcodemodel_lifetime.py  0005_alter_authcodemodel_lifetime.py  0006_alter_authcodemodel_lifetime.py  0007_alter_authcodemodel_lifetime.py  0008_alter_authcodemodel_lifetime.py  0009_alter_authcodemodel_lifetime.py  0010_alter_authcodemodel_lifetime.py  0011_alter_authcodemodel_lifetime.py  0012_alter_authcodemodel_lifetime.py  0013_alter_authcodemodel_lifetime.py  0014_remove_usermodel_basket_usermodel_apartment_and_more.py  0015_usermodel_basket.py  0016_remove_usermodel_basket.py  0017_rename_number_usermodel_house.py  0018_rename_basketmodel_cartmodel_alter_cartmodel_table.py  0019_remove_usermodel_favorites.py  0020_usermodel_favorites.py  0021_remove_usermodel_apartment_remove_usermodel_city_and_more.py
server/api/order/: admin.py  apps.py  docs.py  models.py  serializers.py  services.py  settings.py  urls.py  utils.py  views.py
server/api/order/migrations/: 0001_initial.py  0002_rename_number_ordermodel_house.py  0003_alter_order2modificationmodel_order_model.py  0004_rename_products_modification_ordermodel_products.py  0005_alter_ordermodel_receiving.py  0006_ordermodel_baza_loyalty_ordermodel_is_received_and_more.py  0007_order2modificationmodel_baza_loyalty.py  0008_alter_ordermodel_receiving.py  0009_payment_receipt_ordermodel_amount_receiptitem.py  0010_payment_payment_fail_alter_payment_order_id.py  0011_alter_ordermodel_status.py  0012_remove_order2modificationmodel_baza_loyalty_and_more.py  0013_ordermodel_use_loyalty_and_more.py  0014_alter_ordermodel_address_alter_ordermodel_status.py  0015_ordermodel_is_express.py  0016_ordermodel_comment.py  0017_receiptitem_name_alter_receiptitem_product.py  0018_ordermodel_prepaid_amount_and_more.py  0019_alter_dolyamemodel_amount_and_more.py  0020_alter_dolyamemodel_payment_url.py  0021_alter_dolyamemodel_payment_url.py  0022_alter_dolyamemodel_amount_and_more.py  0023_dolyamemodel_commited.py
server/api/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/api/products/migrations/: 0001_initial.py  0002_alter_productcolormodel_hex_code.py  0003_alter_productmodificationmodel_color.py  0004_productmodificationmodel_modification_id.py  0005_alter_productmodificationmodel_modification_id.py  0006_alter_productmodificationimagemodel_table.py  0007_alter_productmodificationimagemodel_product_modification_and_more.py  0008_bundlemodel_visible.py  0009_bundlemodel_description.py  0010_bundlemodel_category.py  0011_alter_bundleimagemodel_options_and_more.py  0012_alter_productmodificationmodel_size.py  0013_productmodel_old_price.py  0014_colorimagemodel_productcolorimagesmodel_and_more.py  0015_productcolormodel_eng_name_and_more.py  0016_rename_category_productcategorymodel_name.py  0017_productmodel_code.py  0018_productmodificationmodel_visible.py  0019_productmodificationmodel_additional_description_and_more.py  0020_alter_productmodificationmodel_additional_description.py  (+12 more)
server/api/profile/: models.py  urls.py  views.py
server/baza_store/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
server/microservices/videostreaming/: main.py  pyproject.toml  run.sh
server/scripts/: migrate.py  runserver.py
synchronizer/: .env  Dockerfile  Readme.md  create_webhooks.py  main.py  models.py  moy_sklad.py  pyproject.toml  sync_products.py  synchronizer.py  temp.py  updater.py
synchronizer/api_examples/: bundle.json  components.json  product.json  variant.json
synchronizer/app/: moy_sklad.py  synchronizer.py
synchronizer/scripts/: sync_products.py
(+36 files in other folders)
