[tool.poetry]
name = "baza-server"
version = "0.1.0"
description = ""
authors = ["iizhukov <iizhukov@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-rest-framework = "^0.1.0"
django-cors-headers = "^4.3.1"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.9"
pyjwt = "^2.8.0"
requests = "^2.31.0"
dadata = "^21.10.1"
text-unidecode = "^1.3"
python-slugify = "^8.0.4"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
