[tool.poetry]
name = "synchronizer"
version = "0.1.0"
description = ""
authors = ["iizhukov <iizhukov@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.2.0"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
python-slugify = "^8.0.4"
uvicorn = "^0.27.1"
requests = "^2.31.0"
apscheduler = "^3.10.4"
boto3 = "^1.34.98"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
